# fiverr

./: .gitignore  main.py  pyproject.toml
core/: asgi.py  settings.py  urls.py  wsgi.py
otp/: models.py  service.py
templates/: email_otp.html
user/: models.py  signals.py
user/api/v1/serailizer/: user.py
utilis/: apps.py  models.py  otp_email.py
